# rekall

./: .gitignore  .pre-commit-config.yaml  .windsurfrules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURRENT_STATE_GROUNDED.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  agents.md  git_log.txt  git_log2.txt  grievances.md  log_diff.txt  log_diff_utf8.txt  log_utf8.txt  manifest.json  mypy.txt  mypy_utf8.txt  pyproject.toml  pytest_out.txt  pytest_output.txt  requirements.txt  ruff.txt  ruff2.txt  ruff_errors.txt  setup.py  temp_methods.txt  temp_methods_cli.txt  temp_methods_mcp.txt  test_out.txt  test_output.txt  tmp_fix_cli.py  tmp_fix_cli2.py
.claude/: settings.json
.cursor/: mcp.json
.github/: dependabot.yml
diagrams/: README.md  coordination_flow.mmd  exec_query_flow.mmd  state_artifact_model.mmd  system_overview.mmd
docs/: BETA.md  CHECKPOINTING.md  CNAME  CONNECTING_CLIENTS.md  HERO_EXAMPLE.md  IDEMPOTENCY.md  POSITIONING_LOCK.md  QUICKSTART.md  STATE_ARTIFACT.md  VALIDATION.md  WHY_NOT_KANBAN.md  acp.md  index.html  mcp-tools.md  workflow.md
handoff_test/: boot_brief.md
handoff_v2_test/: boot_brief.md  snapshot.json
project-state/: README.md  access.yaml  envs.yaml  manifest.json  project.yaml
reference/: errors_and_conflicts.md  glossary.md  security_model.md  typed_links_catalog.md
roadmap/: design_partners.md  open_questions.md  poc_acceptance_criteria.md  roadmap.md
schemas/: state-artifact.schema.json
scripts/: cleanup_tests.py  cleanup_v02.py  post_decision_trace.py  prune_mcp.py  scan_secrets.ps1  scan_secrets.sh  smoke_client.py  verify.ps1  verify.sh
(+133 files in other folders)
