[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rekall"
dynamic = ["version"]
description = "Project state ledger for AI agents"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pyyaml"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[project.scripts]
rekall = "rekall.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools-scm]
